# cmu-15513

./: .gitignore  .gitmodules  notes.docx  ~$notes.docx
attacklab/: cookie.txt  ctarget  ctarget.txt  farm.c  phase1.txt  phase2-injection.s  phase2.txt  phase3-injection.s  phase3.txt  phase4.txt  phase5.txt  rtarget  rtarget.txt  run.sh
bomblab/: CMakeLists.txt
cachelab/: .gitignore  .labname.mk  CMakeLists.txt  cachelab.c  cachelab.h  csim.c  helper.mk  trans.c
cachelab/traces/csim/: invalid1.trace  invalid2.trace  invalid3.trace
cachelab/traces/traces/: tr1.trace  tr2.trace  tr3.trace
codlab/: cord-interface.h  cordlab-handin.tar  helper.mk
datalab/: .labname.mk  CMakeLists.txt  bits.c  bits.h
final/: final-f12-sol.txt
lab0/: .labname.mk  CMakeLists.txt  Makefile  README  cord.c  grade-cordlab  test-cord.c  xalloc.h
lab1/: .gitignore  bits.c  decl.c  dlc  tests.c
lab1/bddcheck/cbit/: cbit
lab2/: README  bomb  dis.txt  input.txt
malloclab/: .gitignore  .labname.mk  CMakeLists.txt  helper.mk  mm-splay.c  mm.c  test-chkpt.sh  throughputs.txt
notes/: bits.docx  machine code.docx
proxylab/: .gitignore  .labname.mk  cache.c  cache.h  checkpoint.sh  debug.h  http_parser.h  proxy.c  run.sh  util.c  util.h
proxylab/pxy/: pxydrive.py
proxylab/tests/: B13-post-error.cmd
proxylab/tiny/: csapp.c
tshlab/: .gitignore  .labname.mk  tsh.c
w1/: 15-213 Written1- Summer 2022.docx
w2/: Written Assignment #2.docx
w3/: Written Assignment #3.docx
w4/: Written Assignment #4.docx
w5/: Written Assignment #5.docx
w6/: Written Assignment #6.docx
w7/: Written 7.docx
w8/: Written Assignment #8.docx
wa1/: 15-213 Written1- Summer 2022.docx
